# flask-turbine-ui

./: README.md  pyproject.toml
src/: app.py  data_request.py
src/static/styles/: main.css
src/templates/: turbine_list.html
