[tool.poetry]
name = "onyx-turbine-ui"
version = "0.1.0"
description = ""
authors = ["Scott Adams"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = "^2.0.2"
numpy = "^1.21.4"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
